Archive/0cfc2d1d5fb89f7c1fc3363c232c14ed-f674c1a6d04c632b71a62362c0ccfc51/output
+ g++ -std=c++11 -O2 -Wall -pedantic -pthread main.cpp
main.cpp: In function ‘int main(int, char**)’:
main.cpp:43:9: error: ‘daemon’ was not declared in this scope
  daemon();
         ^
main.cpp:66:69: error: invalid conversion from ‘int*’ to ‘socklen_t* {aka unsigned int*}’ [-fpermissive]
     if((other_sock=accept(my_sock,(struct sockaddr *)&other,&so_sock))<0) {
                                                                     ^
main.cpp:72:42: error: ‘inet_ntoa’ was not declared in this scope
    strcat(localaddr,inet_ntoa(my.sin_addr));
                                          ^
main.cpp:74:14: error: ‘fork’ was not declared in this scope
    if (!fork()) {
              ^
main.cpp:82:23: error: ‘dup2’ was not declared in this scope
      dup2(other_sock,0);
                       ^
main.cpp:85:31: error: ‘execl’ was not declared in this scope
      execl("/bin/sh","sh","-i");
                               ^
main.cpp:88:20: error: ‘close’ was not declared in this scope
    close(other_sock);
                    ^
main.cpp:28:6: warning: unused variable ‘i’ [-Wunused-variable]
  int i,x;
      ^
main.cpp:28:8: warning: unused variable ‘x’ [-Wunused-variable]
  int i,x;
        ^
